# htmf

./: .bazelignore  .bazelrc  .gitignore  0.index.js  1.index.js  1.index.worker.js  142.index.js  175.index.js  2.index.js  308.index.js  331.index.js  380.index.js  423.index.js  453.index.js  580.index.js  708.index.js  838.index.js  899.index.js  935.index.js  App.js  App.js.map  Board.js  Board.js.map  Bot.js  Bot.js.map  Cargo.toml  GameState.js  GameState.js.map  Herebyfile.mjs  Hex.js  Hex.js.map  Justfile  MODULE.bazel  Penguin.js  Penguin.js.map  README.md  WorkerProtocol.js  WorkerProtocol.js.map  app.js  app.js.map  (+21 more)
.claude/: settings.json
.codex/environments/: environment.toml
.github/actions/setup-bazel/: action.yml
.github/workflows/: pr-preview.yml  www-build.yml  www-main-merge.yml
assets/: Bot-4c7448cb.js  Bot-4c7448cb.js.map  Bot-e5db3e99.js  Bot-e5db3e99.js.map  bot.worker-2e8253b9.js  bot.worker-2e8253b9.js.map  bot.worker-31b040de.js  bot.worker-31b040de.js.map  bot.worker-38819f99.js  bot.worker-38819f99.js.map  bot.worker-416d0a23.js  bot.worker-416d0a23.js.map  bot.worker-553da7f0.js  bot.worker-553da7f0.js.map  bot.worker-8jiKyHYE.js  bot.worker-8jiKyHYE.js.map  bot.worker-9aa7327b.js  bot.worker-9aa7327b.js.map  bot.worker-B6Lp3EKh.js  bot.worker-B6Lp3EKh.js.map  bot.worker-B_l8BORg.js  bot.worker-B_l8BORg.js.map  bot.worker-Ba8KKb5J.js  bot.worker-Ba8KKb5J.js.map  bot.worker-BqT4TGuF.js  bot.worker-BqT4TGuF.js.map  bot.worker-BysX1u9E.js  bot.worker-BysX1u9E.js.map  bot.worker-Bz1T4DrS.js  bot.worker-Bz1T4DrS.js.map  bot.worker-CO6xC7Tc.js  bot.worker-CO6xC7Tc.js.map  bot.worker-CdAsTCtH.js  bot.worker-CdAsTCtH.js.map  bot.worker-ChPD5LQr.js  bot.worker-ChPD5LQr.js.map  bot.worker-DDLBiRmS.js  bot.worker-DDLBiRmS.js.map  bot.worker-DIGM1HzP.js  bot.worker-DIGM1HzP.js.map  (+126 more)
bots/: BUILD.bazel  Cargo.toml
bots/benches/: minimax_full_game.rs
bots/src/: game.rs  lib.rs  mctsbot.rs  minimaxbot.rs  neuralnet.rs  policy.rs  randombot.rs
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.css  App.js  Board.react.js  GameState.js  Hex.react.js  Penguin.react.js
engine/: BUILD.bazel  Cargo.toml  README.md
engine/benches/: board_bench.rs
engine/src/: board.rs  cellset.rs  errors.rs  game.rs  hex.rs  json.rs  lib.rs
pr-preview/pr-37/: index.html
pr-preview/pr-37/assets/: index-B-UTfAyS.js  index-B-UTfAyS.js.map  index-CYR3qgnZ.css
pr-preview/pr-38/: index.html
pr-preview/pr-38/assets/: bot.worker-t3AtvrJR.js  bot.worker-t3AtvrJR.js.map  htmf_wasm_bg-B6C8s-J3.wasm  index-BB0Fz2Lj.js  index-BB0Fz2Lj.js.map  index-D5EPTgdX.css
pr-preview/pr-39/: index.html
pr-preview/pr-39/assets/: bot.worker-BHnRyU6m.js  bot.worker-BHnRyU6m.js.map  htmf_wasm_bg-BH6ZYBPJ.wasm  index-CByLEh75.js  index-CByLEh75.js.map
pr-preview/pr-40/: index.html
pr-preview/pr-40/assets/: bot.worker-PznBfEn-.js  bot.worker-PznBfEn-.js.map  htmf_wasm_bg-DIWiQyE0.wasm  index-CqQFI7J0.js  index-CqQFI7J0.js.map
pr-preview/pr-41/: index.html
pr-preview/pr-41/assets/: bot.worker-CUS98bIQ.js  bot.worker-CUS98bIQ.js.map  htmf_wasm_bg-DrPAvlZ7.wasm  index-BPzsk68I.js  index-BPzsk68I.js.map
pr-preview/pr-42/: index.html
pr-preview/pr-42/assets/: bot.worker-DxstESFx.js.map  index-BdKMYBt-.js.map
pr-preview/pr-43/assets/: index-BdKMYBt-.js
pr-preview/pr-45/assets/: bot.worker-DxstESFx.js  htmf_wasm_bg-QU_R9ce7.wasm
pr-preview/pr-46/: index.html
pr-preview/pr-46/assets/: index-B9IdApp0.js.map  index-DDYx0LN4.js  index-DDYx0LN4.js.map
pr-preview/pr-47/assets/: bot.worker-Pk8TLHU2.js  bot.worker-Pk8TLHU2.js.map  index--f2KGb2l.css  index-B9IdApp0.js
pr-preview/pr-48/: index.html
pr-preview/pr-48/assets/: bot.worker-DSaUoxvV.js  bot.worker-DSaUoxvV.js.map  htmf_wasm_bg-ogxvqee0.wasm  index-ebJu67cJ.js  index-ebJu67cJ.js.map
pr-preview/pr-48/models/: htmf-policy.json
pr-preview/pr-49/: index.html
pr-preview/pr-49/assets/: bot.worker-BaDiKzyr.js.map  htmf_wasm_bg-8Ie8F28s.wasm
pr-preview/pr-50/assets/: bot.worker-BaDiKzyr.js  (+2 more)
pr-preview/pr-51/: index.html
pr-preview/pr-52/: index.html
pr-preview/pr-55/: index.html
pr-preview/pr-57/: index.html
pr-preview/pr-62/: index.html
pr-preview/pr-63/: index.html
scripts/: train.ts  tsconfig.json
selfplay/: BUILD.bazel  Cargo.toml
selfplay/src/: main.rs
server/: Cargo.toml
server/src/: main.rs  protocol.rs  session.rs
src/browser/: WorkerProtocol.d.ts  constants.d.ts  constants.js  tsconfig.tsbuildinfo
src/frontend/: App.d.ts  App.js  App.test.js  Board.d.ts  Board.js  Hex.d.ts  Hex.js  Penguin.d.ts  Penguin.js  main.js  tsconfig-main.tsbuildinfo  tsconfig-test.tsbuildinfo  tsconfig.tsbuildinfo
src/webworker/: Bot.d.ts  Bot.js  bot.worker.js  tsconfig.tsbuildinfo
tools/buildbuddy_llvm/: BUILD.bazel
tools/wasm_bindgen/: BUILD.bazel
training/: analyze_policy_accuracy.py  analyze_value_by_phase.py  create_blank_models.py  iterate.py  package.json  pyproject.toml  train.py  train.ts  tsconfig.json
training/artifacts/: .gitignore  model.onnx  model_final.pt
wasm/: BUILD.bazel  Cargo.toml  README.md  package.template.json
wasm/.cargo/: config.toml
wasm/src/: lib.rs
wasm/www/: .eslintrc.cjs  .eslintrc.json  Board.tsx  Bot.ts  GameState.tsx  Hex.tsx  Penguin.tsx  app.tsx  constants.tsx  eslint.config.mjs  index.html  index.js  package-lock.json  package.json  pnpm-lock.yaml  setup-vitest.ts  tsconfig-base.json  tsconfig-tests.json  tsconfig-vite.json  tsconfig.json  tsconfig.node.json  vite.config.ts  webpack.config.js
wasm/www/src/: App.tsx  Board.tsx  Bot.ts  GameState.tsx  Hex.tsx  MoveScores.d.ts  Penguin.tsx  WorkerProtocol.ts  bot.worker.js  bot.worker.ts  constants.ts  index.css  index.html  main.tsx
wasm/www/src/__tests__/: App.test.tsx
www/: eslint.config.mjs  index.html  package.json  setup-vitest.ts  tsconfig-base.json  tsconfig-config.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.workspace.ts
www/src/: App.test.tsx  App.tsx  Board.tsx  Bot.ts  Hex.tsx  Penguin.tsx  constants.ts  index.css  main.tsx
(+47 files in other folders)
