module(
    name = "htmf",
    version = "0.1.0",
)

bazel_dep(name = "rules_rust", version = "0.69.0")
bazel_dep(name = "rules_rust_wasm_bindgen", version = "0.69.0")
bazel_dep(name = "toolchains_buildbuddy", version = "0.0.4")
bazel_dep(name = "toolchains_llvm", version = "1.7.0")

use_extension("@toolchains_buildbuddy//:extensions.bzl", "buildbuddy")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_versions = {
        "": "17.0.6",
        # LLVM 17 does not publish macOS x86_64 binaries.
        "darwin-x86_64": "15.0.7",
    },
)
llvm.toolchain(
    name = "llvm_toolchain_linux_exec",
    exec_arch = "amd64",
    exec_os = "linux",
    llvm_version = "17.0.6",
    sha256 = {"": "884ee67d647d77e58740c1e645649e29ae9e8a6fe87c1376be0f3a30f3cc9ab3"},
    strip_prefix = {"": "clang+llvm-17.0.6-x86_64-linux-gnu-ubuntu-22.04"},
    urls = {"": ["https://github.com/llvm/llvm-project/releases/download/llvmorg-17.0.6/clang+llvm-17.0.6-x86_64-linux-gnu-ubuntu-22.04.tar.xz"]},
)
use_repo(llvm, "llvm_toolchain", "llvm_toolchain_linux_exec")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.91.1"],
)

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
)
use_repo(crate, "crates")

wasm_bindgen_cli = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
wasm_bindgen_cli.spec(
    package = "wasm-bindgen-cli",
    repositories = ["wasm_bindgen_cli"],
    version = "=0.2.121",
)
wasm_bindgen_cli.annotation(
    crate = "wasm-bindgen-cli",
    gen_all_binaries = True,
    repositories = ["wasm_bindgen_cli"],
)
wasm_bindgen_cli.from_specs(
    name = "wasm_bindgen_cli",
    cargo_lockfile = "//tools/wasm_bindgen:Cargo.Bazel.lock",
)
use_repo(wasm_bindgen_cli, "wasm_bindgen_cli")

register_toolchains("//tools/wasm_bindgen:toolchain")

register_toolchains("@llvm_toolchain//:all")

register_toolchains("@llvm_toolchain_linux_exec//:all")
