load("@crates//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

package(default_visibility = ["//visibility:public"])

exports_files(["Cargo.toml"])

rust_library(
    name = "htmf_bots",
    srcs = glob(["src/*.rs"]),
    aliases = aliases(),
    crate_name = "htmf_bots",
    crate_root = "src/lib.rs",
    edition = "2021",
    deps = all_crate_deps(normal = True) + [
        "//engine:htmf",
    ],
)

rust_test(
    name = "unit_test",
    size = "small",
    aliases = aliases(
        normal_dev = True,
        proc_macro_dev = True,
    ),
    crate = ":htmf_bots",
    edition = "2021",
    proc_macro_deps = all_crate_deps(proc_macro_dev = True),
    deps = all_crate_deps(normal_dev = True) + [
        "//engine:htmf",
    ],
)

rust_binary(
    name = "debug_modes",
    srcs = ["src/bin/debug_modes.rs"],
    aliases = aliases(),
    edition = "2021",
    deps = all_crate_deps(normal = True) + [
        ":htmf_bots",
        "//engine:htmf",
    ],
)

rust_binary(
    name = "nn_vs_mcts",
    srcs = ["src/bin/nn_vs_mcts.rs"],
    aliases = aliases(),
    edition = "2021",
    deps = all_crate_deps(normal = True) + [
        ":htmf_bots",
        "//engine:htmf",
    ],
)
