[package]
name = "htmf-bots"
version = "0.1.0"
authors = ["Jeff Hemphill <jthemphill@gmail.com>"]
edition = "2021"

[dependencies]
getrandom = "0.2.15"
rand = "0.8.5"
rayon = "1.10.0"

htmf = { path = "../engine" }

[dev-dependencies]
criterion = "0.5.1"

[features]
wasm = ["getrandom/js"]

[[bench]]
name = "minimax_full_game"
harness = false
