[package]
name = "htmf-bots"
version = "0.1.0"
authors = ["Jeff Hemphill <jthemphill@gmail.com>"]
edition = "2021"

[dependencies]
getrandom = "0.3.3"
rand = "0.9.2"
rayon = "1.10.0"

htmf = { path = "../engine" }

[dev-dependencies]
criterion = "0.5.1"

[features]
wasm = ["getrandom/wasm_js"]

[[bench]]
name = "minimax_full_game"
harness = false
