[package]
name = "htmf"
version = "0.1.0"
authors = ["Jeff Hemphill <jthemphill@gmail.com>"]
edition = "2021"

[dependencies]
arrayvec = "0.7.6"
getrandom = "0.3.3"
rand = "0.9.2"
serde = "1.0.217"
serde_derive = "1.0.217"
serde_json = "1.0.134"

[dev-dependencies]
criterion = "0.7"
quickcheck = "1.0"
quickcheck_macros = "1.0"

[[bench]]
name = "board_bench"
harness = false
