[package]
name = "selfplay"
version = "0.1.0"
authors = ["Jeff Hemphill <jhemphill@fb.com>"]
edition = "2021"

[dependencies]
rand = "0.9.2"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

htmf-bots = { path = "../bots" }
htmf = { path = "../engine" }
