[project]
name = "htmf-training"
version = "0.1.0"
description = "Neural network training for HTMF game using PyTorch"
requires-python = "==3.13.*"
dependencies = ["numpy==2.3.5", "torch==2.9.1", "onnxscript>=0.1"]

[project.optional-dependencies]
dev = ["ruff==0.14.6"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
