[package]
name = "htmf-wasm"
version = "0.1.0"
authors = ["Jeff Hemphill <jthemphill@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
parallel = ["rayon", "wasm-bindgen-rayon"]

[dependencies]
js-sys = "0.3.81"
rand = "0.9.2"
rayon = { version = "1.11.0", optional = true }
wasm-bindgen = "0.2.104"
wasm-bindgen-rayon = { version = "1.3.0", optional = true }

[dependencies.console_error_panic_hook]
version = "0.1.7"
optional = true

[dependencies.htmf]
path = "../engine"

[dependencies.htmf-bots]
path = "../bots"

[dependencies.getrandom]
version = "0.3.3"
features = ["wasm_js"]

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ["-O4", '-g']

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(wasm_bindgen_unstable_test_coverage)',
] }
